--- a/ui-command.cabal
+++ b/ui-command.cabal
@@ -7,26 +7,34 @@ Maintainer:          Conrad Parker <conrad@metadecks.org>
 Category:            Development
 Synopsis:            A framework for friendly commandline programs
 Description:         This is a framework for creating commandline applications. It
-		     provides various features which give a polished feel to your
-		     application.
-		     .
+                     provides various features which give a polished feel to your
+                     application.
+                     .
                      It is designed to encourage you to provide clear documentation
-		     and working examples. It implements default ''help''
-		     and ''man'' commands for your application, which will layout help
-		     text and generate Unix-style man pages.
-		     .
+                     and working examples. It implements default ''help''
+                     and ''man'' commands for your application, which will layout help
+                     text and generate Unix-style man pages.
+                     .
                      It provides special handling for applications of the form
-		     ''program command args'', the style of interaction common in revision
-		     control systems. It will dispatch to handler functions that you
-		     provide for each command, and also provide command-specific
-		     help to the user.
+                     ''program command args'', the style of interaction common in revision
+                     control systems. It will dispatch to handler functions that you
+                     provide for each command, and also provide command-specific
+                     help to the user.
 Stability:           experimental
 Build-Type:          Simple
 Cabal-Version:       >= 1.2
 
+flag new-time
+    Description: get defaultTimeLocale is in time
+    default: True
+
 ------------------------------------------------------------
 library
-    Build-Depends:   base < 5, mtl >= 2.0.0.0 && < 3, time, old-locale, data-default
+    if flag(new-time)
+      Build-Depends:   base < 5, mtl >= 2.0.0.0 && < 3, time>=1.5, data-default
+    else
+      Build-Depends:   base < 5, mtl >= 2.0.0.0 && < 3, time<1.5, old-locale, data-default
+
     Exposed-modules: UI.Command
     Other-modules:   UI.Command.App
                      UI.Command.Application
